--- a/cmdtools/gateway/assemblies/notify/properties/Assembly.properties
+++ b/cmdtools/gateway/assemblies/notify/properties/Assembly.properties
@@ -4,6 +4,9 @@
 
 #结束
 
+#微信商户中配置api安全v3证书时我们自己输入的串
+wechat.pay.key=6EA4774EE78DCDF0768CA18ECF3AD1DB
+
 site.session.forbidden=true
 site.session.expire=30000
 site.document=.html|.htm|.ports|.service|.app
